# vcte

./: .gitignore  Cargo.toml  README.md
.github/workflows/: readme.yaml
scripts/: readme.js
src/: colour_string.rs  command_palette.rs  cursor.rs  editor.rs  file_explorer.rs  home.rs  main.rs  readonly.rs  status_bar.rs  status_message.rs  syntax_highlighter.rs  tab.rs  window.rs
