[package]
name = "vcte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.0"
log = "0.4.17"
simplelog = "0.12.1"
strip-ansi-escapes = "0.1.1"
syntect = "5.0.0"
unicode-segmentation = "1.10.1"
