[package]
name = "vcte"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
crossterm = "0.26.0"
log = "0.4.17"
rand = "0.8.5"
simplelog = "0.12.1"
strip-ansi-escapes = "0.1.1"
unicode-segmentation = "1.10.1"
